<resources>
    <string name="app_name">Nhà trọ Hòa An</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="comment">Bình luận</string>
    <string name="update">Cập nhật</string>
    <string name="updateBoardingHouse">Cập nhật thông tin nhà trọ</string>
    <string name="updateAccount">Cập nhật thông tin tài khoản</string>
    <string name="area">Diện tích</string>
    <string name="areaRoom">Diện tích phòng (m²)</string>
    <string name="register">Đăng ký</string>
    <string name="logIn">Đăng nhập</string>
    <string name="logOut">Đăng xuất</string>
    <string name="address">Địa chỉ</string>
    <string name="email">Email</string>
    <string name="price">Giá</string>
    <string name="electricityPrice">Giá điện</string>
    <string name="ePriceUnit">Giá điện (nghìn đồng)</string>
    <string name="waterPrice">Giá nước</string>
    <string name="wPriceUnit">Giá nước (nghìn đồng)</string>
    <string name="rPriceUnit">Giá phòng (triệu đồng)</string>
    <string name="fullName">Họ tên</string>
    <string name="home">Home</string>
    <string name="cancel">Hủy</string>
    <string name="roomType">Loại phòng</string>
    <string name="password">Mật khẩu</string>
    <string name="description">Mô tả</string>
    <string name="descriptionRoom">Mô tả phòng</string>
    <string name="disableInn">Nhà trọ bị vô hiệu hóa</string>
    <string name="enableInn">Nhà trọ đang hoạt động</string>
    <string name="pressIcon">Nhấn biểu tượng bên cạnh để chọn vị trí nhà trọ</string>
    <string name="content">Nội dung</string>
    <string name="room">Phòng trọ</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="account">Tài khoản</string>
    <string name="createAccount">Tạo tài khoản</string>
    <string name="name">Tên</string>
    <string name="nameRoomTpe">Tên loại phòng</string>
    <string name="info">Thông tin</string>
    <string name="create">Thêm</string>
    <string name="createRoomType">Thêm loại phòng</string>
    <string name="createInn">Thêm nhà trọ</string>
    <string name="settingAccount">Thiết lập tài khoản</string>
    <string name="facility">Tiện nghi</string>
    <string name="search">Tìm kiếm</string>
    <string name="TODO">TO DO</string>
    <string name="status">Trạng thái</string>

    <string name="numberPeople">Số người ở</string>
    <string name="numberPeopleMax">Số người ở tối đa</string>
    <string name="pleaseAddress">Vui lòng chọn địa chỉ</string>
    <string name="pleaseEnter">Vui lòng điền các thông tin bên dưới</string>

    <string name="viewMap">Xem map</string>




    <string name="distance">Khoảng cách</string>
    <string name="nameBoardingHouse">Tên nhà trọ</string>
    <string name="district">Huyện</string>
    <string name="village">Xã</string>
    <string name="hamlet">Ấp</string>
    <string name="admin">Admin</string>


    <!--    Mapbox-->
    <string name="access_token">pk.eyJ1IjoiaGVyaW9zIiwiYSI6ImNrZmdtZ2gxczA1cG8ydHBrdnpsMTdkZ3QifQ.Du6AwYSO7AqxwpJ5udZ09A</string>

    <!--LocationPickerActivity activity-->
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>

    <!--Basic user location permission toasts-->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <!--Move map instruction for toast-->
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>

    <!--Marker strings for DirectionsActivity activity-->
    <string name="directions_activity_toast_message">Route is %1$f meters long.</string>

    <!-- Infowindow SymbolLayer -->
    <string name="capital">Capital: %1$s</string>
    <string name="tap_on_marker_instruction">Tap on a marker</string>
</resources>