<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.InnFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_bg_white"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/inn_tv_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/inn_tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/inn_tv_viewMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewMap"
            android:textColor="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/inn_tv_ePrice"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/electricityPrice"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_energy" />

            <TextView
                android:id="@+id/inn_tv_wPrice"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/waterPrice"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_water" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <TextView
            android:id="@+id/inn_tv_description"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/description" />

        <Switch
            android:id="@+id/inn_switch_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/status"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_bg_white"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/inn_tv_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/inn_tv_text"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inn_rv_comment"
            android:layout_below="@id/inn_tv_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_rv_comment"
            android:layout_marginTop="8dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/inn_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/TODO"
            android:src="@drawable/ic_baseline_edit_24"
            app:backgroundTint="@color/colorTitle">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </RelativeLayout>

</LinearLayout>