<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.UpdateAccountActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_background_title">

        <TextView
            android:id="@+id/bh_name_boarding_house"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/updateAccount"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/info"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/ua_progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:indeterminateTint="@color/green"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ua_textInput_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/green"
            app:boxStrokeColor="@color/green"
            app:errorEnabled="true"
            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ua_textInputEditText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ua_textInput_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColorHint="@color/green"
            app:boxStrokeColor="@color/green"
            app:errorEnabled="true"
            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ua_textInputEditText_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ua_textInput_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:textColorHint="@color/green"
            app:boxStrokeColor="@color/green"
            app:errorEnabled="true"
            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ua_textInputEditText_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ua_textInput_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/email"
            android:textColorHint="@color/green"
            app:boxStrokeColor="@color/green"
            app:errorEnabled="true"

            app:hintTextColor="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ua_textInput_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/green"
            app:boxStrokeColor="@color/green"
            app:counterEnabled="true"
            app:errorEnabled="true"

            app:hintTextColor="@color/green"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ua_textInputEditText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ua_button_update"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/green"
            android:text="@string/update"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>