<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".Activity.BoardingHouseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_bg_title">

        <ImageButton
            android:id="@+id/bh_ib_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_arrow_back"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/TODO" />

        <TextView
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_centerInParent="true"
            android:id="@+id/bh_tv_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/bh_imageButton_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_more_vert"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/TODO" />

    </RelativeLayout>

    <LinearLayout
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bg_white"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/bh_tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_house" />

        <TextView
            android:id="@+id/bh_tv_distance"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/distance"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_insights" />


        <TextView
            android:id="@+id/bh_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorTitle">

            <TextView
                android:id="@+id/bh_tv_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <ImageButton
                android:id="@+id/bh_ib_create_roomType"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_add"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/TODO" />
        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:listitem="@layout/item_room_type"
            android:layout_marginTop="8dp"
            android:id="@+id/bh_rv_roomType"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>